--- a/.github/workflows/blank.yml
+++ b/.github/workflows/blank.yml
@@ -11,7 +11,7 @@ on:
     branches: [ "main" ]
 
   # Allows you to run this workflow manually from the Actions tab
-  workflow_dispatch:
+  # workflow_dispatch:
 
 # A workflow run is made up of one or more jobs that can run sequentially or in parallel
 jobs:
@@ -31,5 +31,5 @@ jobs:
         run: |
           echo "${{ secrets.SSH_PRIVATE_KEY }}" > site_chave.pem
           chmod 400 site_chave.pem 
-          scp -o StrictHostKeyChecking=no -i site_chave.pem *.css *.html ubuntu@ec2-18-156-78-72.eu-central-1.compute.amazonaws.com:/var/www/html/ea/
+          scp -o StrictHostKeyChecking=no -i site_chave.pem *.css *.html *.png ubuntu@ec2-18-156-78-72.eu-central-1.compute.amazonaws.com:/var/www/html/ea/
           
